app/assets/stylesheets/components/_layouts.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .banner-container:not(:has(*)) {
    display: none;
  }

  .sidebar--overlay {
    @apply fixed top-0 left-0 w-full h-dvh;
    background-color: rgba(0, 0, 0, 0.2);
    z-index: 2;
    transition: opacity 0.3s;

    &.overlay--hidden {
      opacity: 0;
      pointer-events: none;
    }
  }

  .sidebar {
    @apply fixed -left-72 w-72 h-dvh flex items-start flex-col
      overflow-x-visible border border-x-0 border-r border-b-0 border-l-0
      backdrop-blur-xl z-30 shadow-lg;

    transition: left 0.3s;

    background-color: rgba(255, 255, 255, 0.8);
    @media (min-width: 1024px) {
      background-color: rgba(255, 255, 255, 0.9);
    }
    @media (max-width: 1024px) {
      left: 0 !important;
    }
    border-color: rgba(200, 200, 200, 0.3) !important;
    border-top-width: 0px;

    [data-dark='true'] & {
      border-color: rgba(200, 200, 200, 0.1) !important;
      background-color: rgba(37, 36, 41, 0.5);

      & hr {
        background: rgba(200, 200, 200, 0.3) !important;
      }
    }

    & .command-bar-trigger {
      @apply h-10 shadow-none w-100 justify-start px-3 flex items-center cursor-pointer border-none;
      color: inherit;
      font-size: 15px;
      transition: background 0.2s ease-in-out;

      background: rgba(200, 200, 200, 0.1);
      --key-bg: rgba(200, 200, 200, 0.3);

      &:hover {
        background: rgba(200, 200, 200, 0.2);
      }
      &:active {
        background: rgba(200, 200, 200, 0.25);
        --key-bg: rgba(200, 200, 200, 0.45);
      }

      .key {
        transition: background 0.2s ease-in-out;
        background: var(--key-bg);
      }

      /* Dark mode overrides */
      [data-dark='true'] & {
        --key-bg: rgba(200, 200, 200, 0.1);
        &:hover {
          --key-bg: rgba(200, 200, 200, 0.2);
        }
        &:active {
          --key-bg: rgba(200, 200, 200, 0.25);
        }
      }
    }

    .sidebar--scroll-container {
      overflow: hidden;
      @apply flex-1 w-full p-2 px-5;
      overflow-y: auto;
    }
  }

  .mobile-nav {
    @apply lg:hidden fixed bottom-0 left-0 w-full p-10 z-10 flex justify-center pointer-events-none;

    & .mobile-nav--trigger {
      @apply rounded-full text-black px-5 py-3 max-w-full flex items-center pointer-events-auto gap-3 active:scale-90 transition-transform cursor-pointer;
      width: 300px;
      background-color: rgba(200, 200, 200, 0.4);
      backdrop-filter: blur(15px);
      box-shadow: var(--shadow-border-lg);

      [data-dark='true'] & {
        color: white;
        background-color: rgba(50, 50, 50, 0.4);
      }
    }
  }

  .mobile-nav--modal {
    @apply lg:invisible modal modal--scroll modal--popover p-3 bg-transparent shadow-none;
    height: auto !important;
    max-height: 80vh !important;
  }
}

.mobile-nav--popover {
  @apply flex-1 mt-auto overflow-hidden rounded-xl;

  background-color: rgba(255, 255, 255, 1) !important;
  [data-dark='true'] & {
    background-color: rgba(37, 36, 41, 5) !important;
  }
}

.user-menu-trigger {
  display: flex;
  align-items: center;
  border: 0;
  flex: 1;
  gap: 0.5rem;
  padding: 0.5rem;
  font-weight: 600;
  color: inherit;
  background-color: transparent;
  font-size: 15px;
}

.container {
  width: 100%;
  margin: 0 auto;
  max-width: 64rem;
}

.container--full {
  max-width: none;
  padding: 0px;
}

.container--xl {
  max-width: 72rem;
}

.container--md {
  max-width: 64rem;
}

.container--sm {
  max-width: 56rem;
}

.container--xs {
  max-width: 28rem;
}

.app__content {
  h1:first-child {
    margin-top: 1.75rem;
  }
}

.grid {
  display: grid;
  grid-gap: 1rem;
  width: 100%;

  > a {
    color: inherit;
    text-decoration: none;
  }
}

.list-reset,
ul.grid,
ul.mixed-grid {
  list-style: none;
  padding-left: 0;
}

.mixed-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
  grid-gap: 1rem;

  @media (min-width: 32em) {
    .comment__name {
      margin-left: 0;
      margin-top: 0;
    }
  }

  a {
    text-decoration: none;
  }

  p {
    margin: 0;
  }
}

@media screen and (min-width: 32em) {
  .grid {
    grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));

    .comment__name {
      margin-left: 0;
      margin-top: 0;
    }
  }

  .grid--narrow {
    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
  }

  .grid--medium-narrow {
    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
  }

  .grid--wide {
    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
  }

  .grid--split {
    grid-template-columns: repeat(2, 1fr);
  }

  .grid__fill {
    grid-column: -1 / 1;
  }
}

.grid--spacious {
  grid-template-columns: repeat(1, minmax(10rem, 1fr));
}

@media (min-width: 600px) {
  .grid--spacious {
    grid-template-columns: repeat(2, minmax(10rem, 1fr));
  }
}
@media (min-width: 1280px) {
  .grid--spacious {
    grid-template-columns: repeat(3, minmax(10rem, 1fr));
    grid-gap: 1rem;
  }
}

